fixing alignment

--- a/gallery.css
+++ b/gallery.css
@@ -478,7 +478,7 @@ h1.our-memories {
 }
 
 .dragonball-cursor {
-    cursor: url('dragonballs/dragon_radar.png') 0 0, auto;
+  cursor: url('dragonballs/dragon_radar.png') 64 42, auto;
 }
 
 /* Mobile Disable */
